[package]
name = "nih_plug_slint"
version = "0.1.1"
edition = "2024"
license = "ISC"
description = "An adapter to use Slint GUIs with NIH-plug"
keywords = ["audio", "plugin", "vst3", "clap", "slint"]
categories = ["multimedia::audio"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "28b149ec4d62757d0b448809148a0c3ca6e09a95" }
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "fd3c9dcf806cd38c83dfa94e70005c547af8764c", features = ["opengl"] }
slint = { version = "=1.16.1", default-features = false, features = ["std", "renderer-femtovg", "raw-window-handle-06", "compat-1-2"] }
i-slint-renderer-femtovg = { version = "=1.16.1", features = ["opengl"] }
raw-window-handle = "0.6"
crossbeam = "0.8"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
keyboard-types = { version = "0.6.2", default-features = false }
